@@ -24,6 +24,8 @@ Changes:
 
 * Reference arguments stored as caller_stack are weakened if it is possible.
 
+* catch method takes no arguments.
+
 ------------------------------------------------------------------------
 0.1901 | Piotr Roszatycki <dexter@debian.org> | 2008-10-13
 
